--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,5 +1,5 @@
 name: Build
-on: [push, pull_request]
+on: [ push, pull_request ]
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -35,7 +35,7 @@ jobs:
       - name: Install
         run: composer install
       - name: test
-        run: composer test
+        run: ./tools/phpunit --color --coverage-text
   analyze:
     runs-on: ubuntu-latest
     continue-on-error: false
